--- a/9_20/index.html
+++ b/9_20/index.html
@@ -24,7 +24,7 @@
 
         <button onclick="changeColor()">どたんだぞ！！</button>
 
-        <button onclick="increaseCount()">数字が増えんボタン</button>
+        <button onclick="increaseCount()">数字が増えボタン</button>
 
         <button onclick="herasuCount()">減るボタン</button>
 
