--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 
     <title>生年月日入力</title>
 
@@ -16,11 +16,35 @@
 
     <h1>生年月日の入力</h1>
 
-    <input id="month" placehold="月を入力てね💛">
+    <label for="month">月:</label>
 
-    <input id="day" placehold="日を入力してな">
+    <input type="number" id="month" placeholder="月を入力てね💛" min="1" max="12">
 
-    <button onclick="errorInput">入力</button>
+    <label for="month">日:</label>
+
+    <input type="number" id="month" placeholder="日を入力してな" min="1" max="31">
+
+    <button onclick="errorInput()">入力</button>
+
+    <div></div>
+
+    <label for="pet-select">あなたの飼いたいおペットは??:</label>
+
+    <serect name="pets" id="pet-select">
+
+        <option value="">選タックしてください</option>
+
+        <option value="dog">いっぬ</option>
+
+        <option value="cat">ネッコ</option>
+
+        <option value="Parakeet">セキセイインコ</option>
+
+        <option value="spaider">蜘蛛</option>
+
+        <option value="goldfish">金魚</option>
+
+    </serect>
 
 </body>
 
