--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <label for="pet-select">あなたの飼いたいおペットは??:</label>
 
-    <serect name="pets" id="pet-select">
+    <select name="pets" id="pet-select">
 
         <option value="">選タックしてください</option>
 
@@ -44,7 +44,7 @@
 
         <option value="goldfish">金魚</option>
 
-    </serect>
+    </select>
 
 </body>
 
