--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
     <body>
 
+        <select name = "games" id = "game-select">
+
+            <option value="">--ゲームを選択--</option>
+
+            <option value="clicker">クリッカーゲーム</option>
+
+            <option value="number-guess">数当てゲーム</option>
+
+        </select>
+
         <div id = "game-container"></div>
 
     </body>
